add phpcr-cleanup command

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,8 @@ services:
         # https://symfony.com/doc/current/service_container.html#binding-arguments-by-name-or-type
         #bind:
         #    'bool $isDebug': '%kernel.debug%'
+        bind:
+            $documentManagerEventDispatcher: '@sulu_document_manager.event_dispatcher.standard'
 
 
     # makes classes in src/ available to be used as services
@@ -28,3 +30,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Sulu\Component\DocumentManager\NamespaceRegistry:
+        alias: sulu_document_manager.namespace_registry
+
+    Sulu\Component\DocumentManager\DocumentManagerInterface:
+        alias: sulu_document_manager.document_manager
