--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,6 +18,9 @@ services:
         bind:
             $documentManagerEventDispatcher: '@sulu_document_manager.event_dispatcher.standard'
             $projectDirectory: '%kernel.project_dir%'
+            $mapping: '%sulu_document_manager.mapping%'
+            $session: '@sulu_document_manager.default_session'
+            $liveSession: '@sulu_document_manager.live_session'
 
 
     # makes classes in src/ available to be used as services
@@ -37,3 +40,9 @@ services:
 
     Sulu\Component\DocumentManager\DocumentManagerInterface:
         alias: sulu_document_manager.document_manager
+
+    Sulu\Component\Content\Metadata\Factory\StructureMetadataFactoryInterface:
+        alias: sulu_page.structure.factory
+
+    Sulu\Bundle\HttpCacheBundle\EventSubscriber\InvalidationSubscriber:
+        alias: sulu_http_cache.event_subscriber.invalidation
