--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,8 +13,8 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         # Binding arguments by name or type
         # https://symfony.com/doc/current/service_container.html#binding-arguments-by-name-or-type
-        #bind:
-        #    'bool $isDebug': '%kernel.debug%'
+        bind:
+            'string $projectDirectory': '%kernel.project_dir%'
 
 
     # makes classes in src/ available to be used as services
